Removed markup from active breadcrumb item

--- a/ckan/custom_templates/package/search.html
+++ b/ckan/custom_templates/package/search.html
@@ -2,7 +2,7 @@
 {% import 'macros/form.html' as form %}
 
 {% block breadcrumb_content %}
-  <li class="active">{{ h.nav_link(_('Datasets'), controller='package', action='search', highlight_actions = 'new index') }}</li>
+  {{ h.nav_link(_('Datasets'), controller='package', action='search', highlight_actions = 'new index') }}
 {% endblock %}
 
 {% block primary_content %}
