--- a/ckan/custom_templates/snippets/home_breadcrumb_item.html
+++ b/ckan/custom_templates/snippets/home_breadcrumb_item.html
@@ -1,2 +1,2 @@
 {# Used to insert the home icon into a breadcrumb #}
-<a href="{{ h.url('home') }}">{{ _('Home') }}</a>
+<a href="{{ h.url('home') }}">{{ _('Home') }}</a> /
