--- a/ckan/custom_templates/package/base.html
+++ b/ckan/custom_templates/package/base.html
@@ -8,13 +8,13 @@
   {% if pkg %}
     {% set dataset = pkg.title or pkg.name %}
     {% if pkg.organization %}
-      / {% link_for _('Datasets'), controller='package', action='search' %}
+      {% link_for _('Datasets'), controller='package', action='search' %}
     {% else %}
-      / {% link_for _('Datasets'), controller='package', action='search' %}
+      {% link_for _('Datasets'), controller='package', action='search' %}
     {% endif %}
       / {% link_for dataset|truncate(30), controller='package', action='read', id=pkg.name %}
   {% else %}
-    / {% link_for _('Datasets'), controller='package', action='search' %}
-    / <a href="">{{ _('Create Dataset') }}</a>
+    {% link_for _('Datasets'), controller='package', action='search' %}
+    <a href="">{{ _('Create Dataset') }}</a>
   {% endif %}
 {% endblock %}
