--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -9,7 +9,7 @@
   <div class="comments--wrapper" data="{{ pkg_dict.id }}">
     <ul class="comments--list">
       <li class="comments--list-item">
-        <div class="comments--list--cid"></div>
+        <a id="comment-comments--list--cid"></a>
         <h3 class="comments--list-author"></h3>
         <a href="#commentlink" class="comments--list-posted"></a>
         <div class="comments--list-content">
