--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -10,7 +10,7 @@
     <ul class="comments--list">
       <li class="comments--list-item">
         <h3 class="comments--list-author"></h3>
-        <a href="#commentlink" class="comments--list-posted"></a>
+        <a href="#commentlink" id="comments--list-id" class="comments--list-posted"></a>
         <div class="comments--list-content">
         </div>
       </li>
