--- a/ckan/custom_templates/package/snippets/resources.html
+++ b/ckan/custom_templates/package/snippets/resources.html
@@ -18,7 +18,7 @@ Example:
       <h2 class="spotbox--header"><i class="icon-copy"></i> {{ _("Resources") }}</h2>
       <ul class="spotbox--list">
         {% for resource in resources %}
-          <li class="nav-item{{ ' active' if active == resource.id }}">
+          <li class="spotbox--list-item{{ ' active' if active == resource.id }}">
             {% link_for h.resource_display_name(resource)|truncate(25), controller='package', action=action or 'resource_read', id=pkg.name, resource_id=resource.id, inner_span=true %}
           </li>
         {% endfor %}
