added old template structure

--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -9,8 +9,9 @@
   <div class="comments--wrapper" data="{{ pkg_dict.id }}">
     <ul class="comments--list">
       <li class="comments--list-item">
+        <div class="comments--list-id"></div>
         <h3 class="comments--list-author"></h3>
-        <a href="#commentlink" id="comments--list-id" class="comments--list-posted"></a>
+        <a href="#commentlink" class="comments--list-posted"></a>
         <div class="comments--list-content">
         </div>
       </li>
