--- a/ckan/custom_templates/base.html
+++ b/ckan/custom_templates/base.html
@@ -21,7 +21,9 @@
     </title>
     <link type="text/css" rel="stylesheet" href="/sites/odaa.dk/themes/odaa/css/odaa.styles.css" media="all" />
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    <script src="/sites/odaa.dk/themes/odaa/scripts/pure_min.js"></script>
+    <script src="/sites/odaa.dk/themes/odaa/scripts/pure.min.js"></script>
+    <script src="/sites/odaa.dk/themes/odaa/scripts/html5shiv.min.js"></script>
+    <script src="/sites/odaa.dk/themes/odaa/scripts/selectivizr.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/comment.js"></script>
     <!-- Load navigation region from Drupal that way we have the same navigation -->
     <script>
@@ -33,7 +35,7 @@
           menu.before(data);
           menu.remove();
           $('.context-block-region').hide();
-        }); 
+        });
       })(jQuery);
     </script>
   </head>
