--- a/ckan/custom_templates/base.html
+++ b/ckan/custom_templates/base.html
@@ -20,6 +20,7 @@
       {%- endblock -%}
     </title>
     <link type="text/css" rel="stylesheet" href="/sites/odaa.dk/themes/odaa/css/odaa.styles.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="/sites/odaa.dk/themes/odaa/css/odaa.ie8.css" media="all" />
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/pure.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/html5shiv.min.js"></script>
