Action block added.

--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -41,6 +41,12 @@
             {% endblock %}  
           </div>
         {% endblock %}
+        
+        {% block actions %}
+            <div class="btn-group actions">
+          {% block actions_content %}{% endblock %}
+          </div>
+        {% endblock %}
 
         {% block content %}
           {% block primary_content %}{% endblock %}
