--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -49,6 +49,7 @@
         {% endblock %}
 
         {% block content %}
+          {% block pre_primary %}{% endblock %}
           {% block primary_content %}{% endblock %}
           {% block secondary_content %}{% endblock %}
         {% endblock %}
