--- a/ckan/custom_templates/package/resource_read.html
+++ b/ckan/custom_templates/package/resource_read.html
@@ -66,6 +66,52 @@
 {% block primary_content %}
   <div class="primary-content">
     <div class="page--content-wrapper">
+       {% block resource_actions %}
+       <ul class="dataset--tabs">
+          {% block resource_actions_inner %}
+            {% if h.check_access('package_update', {'id':pkg.id }) %}
+              <li>{% link_for _('Edit'), controller='package', action='resource_edit', id=pkg.name, resource_id=res.id, class_='btn', icon='wrench' %}</li>
+            {% endif %}
+            {% if res.url %}
+              <li>
+                <a class="btn btn-primary resource-url-analytics resource-type-{{ res.resource_type }}" href="{{ res.url }}">
+                  {% if res.resource_type in ('listing', 'service') %}
+                    <i class="icon-eye-open"></i> {{ _('View') }}
+                  {% elif  res.resource_type == 'api' %}
+                    <i class="icon-key"></i> {{ _('API Endpoint') }}
+                  {% elif not res.can_be_previewed %}
+                    <i class="icon-external-link"></i> {{ _('Go to resource') }}
+                  {% else %}
+                    <i class="icon-download"></i> {{ _('Download') }}
+                  {% endif %}
+                </a>
+              </li>
+            {% endif %}
+            {% if 'datastore' in g.plugins %}
+              <li>{% snippet 'package/snippets/data_api_button.html', resource=res, datastore_root_url=c.datastore_api %}</li>
+            {% endif %}
+          {% endblock %}
+        </ul>
+      {% endblock %}
+      {% block resource_content %}
+        {% block resource_read_title %}<h1 class="page-heading">{{ h.resource_display_name(res) | truncate(50) }}</h1>{% endblock %}
+        {% block resource_read_url %}
+          {% if res.url %}
+            <p class="muted ellipsis">{{ _('URL:') }} <a href="{{ res.url }}" title="{{ res.url }}">{{ res.url }}</a></p>
+          {% endif %}
+        {% endblock %}
+        <div class="prose notes" property="rdfs:label">
+          {% if res.description %}
+            {{ h.render_markdown(res.description) }}
+          {% else %}
+            <p class="empty">{{ _('There is no description for this resource') }}</p>
+          {% endif %}
+          {% if not res.description and c.package.notes %}
+            <h3>{{ _('From the dataset abstract') }}</h3>
+            <blockquote>{{ h.markdown_extract(c.package.get('notes')) }}</blockquote>
+            <p>{% trans dataset=c.package.title, url=h.url_for(controller='package', action='read', id=c.package['name']) %}Source: <a href="{{ url }}">{{ dataset }}</a>{% endtrans %}
+          {% endif %}
+      {% endblock %}
       {% block resource_additional_information %}
       {% if res %}
         <h2>{{ _('Additional Information') }}</h2>
