Added link if not logged in.

--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -39,4 +39,11 @@
       </form>
     </div>
   </section>
+  <section class="comments--post-comment-login">
+    <h2 class="comments--post-comment-header">{{ _('Not logged in') }}</h2>
+    <div class="comments--post-comment">
+      <p><?php print t('Please use the following link to login'); ?>: <a href="/user">Login</a></p>
+    </div>
+  </section>
+  
 </section>
