--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -42,7 +42,7 @@
   <section class="comments--post-comment-login">
     <h2 class="comments--post-comment-header">{{ _('Not logged in') }}</h2>
     <div class="comments--post-comment">
-      <p><{{ _('Please use the following link to login') }}: <a href="/user">Login</a></p>
+      <p>{{ _('Please use the following link to login') }}: <a href="/user">Login</a></p>
     </div>
   </section>
   
