Fixed wrong end tag

--- a/ckan/custom_templates/package/base_form_page.html
+++ b/ckan/custom_templates/package/base_form_page.html
@@ -5,7 +5,7 @@
     <div class="page--content-wrapper">
       {% block form %}{{ c.form | safe }}{% endblock %}
     </div>
-  </section>
+  </div>
 {% endblock %}
 
 {% block secondary_content %}
