--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -42,6 +42,13 @@
           </div>
         {% endblock %}
 
+	{% block actions %}
+          <div class="btn-group actions">
+          {% block actions_content %}{% endblock %}
+          </div>
+        {% endblock %}
+
+
         {% block content %}
           {% block pre_primary %}{% endblock %}
           {% block primary_content %}{% endblock %}
