Comment edit/remove added.

--- a/ckan/custom_templates/base.html
+++ b/ckan/custom_templates/base.html
@@ -25,6 +25,7 @@
     <script src="/sites/odaa.dk/themes/odaa/scripts/pure.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/html5shiv.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/selectivizr.min.js"></script>
+    <script src="/sites/odaa.dk/themes/odaa/scripts/odaa.comment.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/comment.js"></script>
     <!-- Load navigation region from Drupal that way we have the same navigation -->
     <script>
