--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -14,6 +14,17 @@
         <a href="#commentlink" class="comments--list-posted"></a>
         <div class="comments--list-content">
         </div>
+        <div class="comments--list-item-actions">
+          <a class="comments--list-quote" href="#postcomment"><i class="icon-quote-left"></i>Quote</a>
+          <ul class="links inline">
+            <li class="comment-delete first">
+              <a href="/comment/"><i class="icon-remove-sign"></i>slet</a>
+            </li>
+            <li class="comment-edit last">
+              <a href="/comment/"><i class="icon-edit"></i>redigér</a>
+            </li>
+          </ul>    
+        </div>
       </li>
     </ul>
   </div>
