--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -13,7 +13,9 @@
         <h3 class="comments--list-author"></h3>
         <a href="#commentlink" class="comments--list-posted"></a>
         <div class="comments--list-content">
-          <p></p>
+          <div class="field-comment-body">
+            <p></p>
+          </div>
           <div class="comments--list-item-actions">
             <a class="comments--list-quote" href="#postcomment"><i class="icon-quote-left"></i>Quote</a>
             <ul class="links inline">
