--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -12,7 +12,7 @@
         <div class="comments--list-id"></div>
         <h3 class="comments--list-author"></h3>
         <a href="#commentlink" class="comments--list-posted"></a>
-        <div class="comments--list-content">
+        <div class="comments--list-content js-comments-content">
           <div class="field-comment-body">
             <p></p>
           </div>
