--- a/ckan/custom_templates/package/snippets/comment.html
+++ b/ckan/custom_templates/package/snippets/comment.html
@@ -17,7 +17,7 @@
             <p></p>
           </div>
           <div class="comments--list-item-actions">
-            <a class="comments--list-quote" href="#postcomment" onclick="addCommentQuote(this)"><i class="icon-quote-left"></i>Quote</a>
+            <a class="comments--list-quote" href="#postcomment" onclick="add_comment_quote(this)"><i class="icon-quote-left"></i>Quote</a>
             <ul class="links inline">
               <li class="comment-delete first">
                 <a href="/comment/"><i class="icon-remove-sign"></i>slet</a>
