--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -43,6 +43,11 @@
         {% endblock %}
 
         {% block content %}
+          {% block actions %}
+            <div class="btn-group actions">
+              {% block actions_content %}{% endblock %}
+            </div>
+          {% endblock %}
           {% block pre_primary %}{% endblock %}
           {% block primary_content %}{% endblock %}
           {% block secondary_content %}{% endblock %}
