--- a/ckan/custom_templates/base.html
+++ b/ckan/custom_templates/base.html
@@ -21,7 +21,7 @@
     </title>
     <link type="text/css" rel="stylesheet" href="/sites/odaa.dk/themes/odaa/css/odaa.styles.css" media="all" />
     <!--[if IE 8]><link type="text/css" rel="stylesheet" href="/sites/odaa.dk/themes/odaa/css/odaa.ie8.css" media="all" /><![endif]-->
-    <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/pure.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/html5shiv.min.js"></script>
     <script src="/sites/odaa.dk/themes/odaa/scripts/selectivizr.min.js"></script>
