--- a/ckan/custom_templates/package/base_form_page.html
+++ b/ckan/custom_templates/package/base_form_page.html
@@ -8,24 +8,25 @@
   </div>
 {% endblock %}
 
-{% block secondary_content %}
-  {% block info_module %}
-    <section class="module module-narrow module-shallow">
-      <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What are datasets?') }}</h2>
-      <div class="module-content">
-        <p>
+{% block secondary_content %}  
+  <div class="secondary-content">
+     <div class="spotbox">
+      <div class="spotbox--inner">
+        <h2 class="spotbox--header"><i class="icon-info-sign"></i> {{ _('What are datasets?') }}</h2>
+        <div class="spotbox-content">         
           {% trans %}
           Datasets are simply used to group related pieces of data. These
           can then be found under a single url with a description and
           licensing information.
-          {% endtrans %}
-        </p>
+          {% endtrans %}       
+        </div>
       </div>
-    </section>
-  {% endblock %}
+    </div>
+  </div>   
+{% endblock %}
 
   {% block resources_module %}
     {# TODO: Pass in a list of previously created resources and the current package dict #}
     {% snippet "package/snippets/resources.html", pkg={}, action='new_resource' %}
   {% endblock %}
-{% endblock %}
+
