--- a/ckan/custom_templates/page.html
+++ b/ckan/custom_templates/page.html
@@ -6,7 +6,7 @@
     <header class="site-header">
       <section class="header-wrapper">
         <div class="header-inner">
-          <a href="/" class="logo"><img alt="" src="/sites/odaa.dk/themes/odaa/logo.png"></a>
+          <a href="/" class="logo"><img alt="" src="/logo"></a>
           <div class="search-form">
             <form action="/dataset" method="get">
               <input type="text" name="q" placeholder="{{ _('Search for dataset') }}..." class="search-form-text" />
